# simple-api-rust

./: Cargo.toml
src/: bin.rs
src/db/: mod.rs
src/models/: mod.rs
