[package]
name = "simple-api-rust"
version = "0.1.0"
authors = ["Ivan Majeru <ivanmajeru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rest-api"
path = "src/bin.rs"

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

[dependencies.tokio]
version = "1.0"
features = ["full"]
